# save-to-server

./: .local.env  .syncignore  .tmp-flowit-updater.key  .tmp-flowit-updater.key.pub  README.md  Start Sync.bat  Start Sync.command  easy.ps1  easy.sh  ignore  inforfailback.md  package-desktop.sh  run.ps1  run.sh
.github/workflows/: release-tauri.yml
backend/: .gitignore  .htaccess
backend/api/: ping.php  register.php  telemetry_token.php  track.php
backend/config/: config.php.example  db.php  helpers.php
backend/migrations/: 001_create_tables.sql  002_add_user_identity_links.sql  003_add_sync_control_to_app_instances.sql
desktop/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
desktop/src/: main.js  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
flowit/: .htaccess  index.php  login.php  logout.php
flowit/assets/: style.css
flowit/config/: bootstrap.php  config.php.example
launchd/: com.save-to-server.sync.plist
scripts/: sync_to_smb.ps1  sync_to_smb.sh
