[package]
name = "flowit"
version = "0.1.0"
description = "Flowit desktop shell for SMB sync scripts"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
rfd = "0.15"
ignore = "0.4"
tauri-plugin-updater = "2"

[features]
default = []
