[package]
name = "flowit"
version = "0.1.17"
description = "Flowit desktop shell for SMB sync scripts"
authors = ["sithembiso.sangweni"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
rfd = "0.15"
ignore = "0.4"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
rusqlite = { version = "0.32", features = ["bundled"] }

[features]
default = []
